fix(core): jmn link field type environment not required
In the demo we got this error:

Key "environment" for array with keys "label, class, lastOfRow, helptext, expanded, multiple, json_menu_nested_types, json_menu_nested_field, json_menu_nested_unique, query, display_template, choices_template" does not exist.

--- a/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
+++ b/EMS/core-bundle/src/Resources/views/macros/data-field-type.html.twig
@@ -1034,7 +1034,7 @@
 	{%- set jmnQuery = displayOptions.query|default(false) -%}
 
 	{%- if jmnField and jmnQuery and dataField.rawData is not null -%}
-        {% if displayOptions.environment is not null %}
+        {% if displayOptions.environment|default(null) is not null %}
             {% set index = displayOptions.environment|emsco_get_environment.alias %}
         {% else %}
             {% set index = dataField.fieldType.contentType.environment.alias %}
