--- a/demo/skeleton/template/redirects/media_files.json.twig
+++ b/demo/skeleton/template/redirects/media_files.json.twig
@@ -1,9 +1,17 @@
 {%- block request %}
     {% apply spaceless %}
+        {% set config = {
+            _disposition: source.disposition|default(false),
+            _username: source.username|default(false),
+            _password: source.password|default(false),
+            _before: source.before|default(false),
+            _after: source.after|default(false)
+        }|filter(v => v != false) %}
         {{ {
             controller: 'EMS\\CommonBundle\\Controller\\FileController::resolveAsset',
             path: {
                fileField: source.media_file,
+               configArray: config
             },
         }|json_encode|raw }}
     {% endapply %}
