--- a/EMS/core-bundle/src/Resources/views/contenttype/edit.html.twig
+++ b/EMS/core-bundle/src/Resources/views/contenttype/edit.html.twig
@@ -102,7 +102,8 @@
                             {% block title %}Tasks{% endblock title %}
                             {% block body %}
                                 <div class="row">
-                                    <div class="col-md-4">{{ form_widget(form.settings.tasks_enabled) }}</div>
+                                    <div class="col-md-2">{{ form_row(form.settings.tasks_enabled) }}</div>
+                                    <div class="col-md-8">{{ form_row(form.settings.tasks_titles) }}</div>
                                 </div>
                             {% endblock body %}
                         {% endembed  %}
