--- a/EMS/core-bundle/src/Resources/views/user/edit.html.twig
+++ b/EMS/core-bundle/src/Resources/views/user/edit.html.twig
@@ -32,6 +32,7 @@
             {% endif %}
 			{{ form_row(form.userOptions) }}
 	    	{{ form_row(form.roles) }}
+            {{ form_row(form.expirationDate) }}
     	</div>
     </div>
     <div class="box-footer">
