--- a/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/panel.html.twig
+++ b/EMS/admin-ui-bundle/src/Resources/views/bootstrap5/core/panel.html.twig
@@ -1,3 +1,4 @@
+{%- trans_default_domain 'elements' -%}
 <div class="panel panel-default">
     <div class="panel-heading">
         <h3 class="panel-title">
@@ -5,8 +6,8 @@
             {% block title %}{% endblock title %}
             <a class="toggle-button pull-right" role="button" data-toggle="collapse"
                href="#{{ id }}" aria-expanded="false" aria-controls="{{ id }}"
-               data-toggle-contain="Hide <i class=&quot;fa fa-chevron-down&quot;></i>">
-                Show <i class="fa fa-chevron-right"></i>
+               data-toggle-contain="{{ 'hide'|trans }} <i class=&quot;fa fa-chevron-down&quot;></i>">
+                {{ 'show'|trans }} <i class="fa fa-chevron-right"></i>
             </a>
         </h3>
     </div>
